Reduce volume to 0.015 (macOS notification level)

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ function createMusicSequence(type) {
   const gain = audioContext.createGain();
   gain.connect(audioContext.destination);
   gain.gain.setValueAtTime(0, now);
-  gain.gain.linearRampToValueAtTime(0.06, now + 0.5);
+  gain.gain.0.015, now + 0.5);
     let loopInterval = null;
   currentGain = gain;
 
